--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/
     #  - assets/images/D:/music_player_1/build/assets/images/home3.jpg
     #  - build/assets/images
     # - images/a_dot_ham.jpeg
